force-app/main/default/objects/Opportunity_Dashboard__c/Opportunity_Dashboard__c.object-meta.xml
<CustomObject>
    <label>Opportunity Dashboard</label>
    <nameField>
        <displayFormat>OPP-{000000}</displayFormat>
        <label>Opportunity Dashboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>