force-app/main/default/objects/Opportunity_Dashboard__c/fields/Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>Approve_Date__c</fullName>
    <label>Approve Date</label>
    <type>Date</type>
</CustomField>