force-app/main/default/objects/Opportunity_Dashboard__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architect</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. (Account Type not equal Architect)</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Architect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Dashboards (Architect)</relationshipLabel>
    <relationshipName>Opportunity_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>