force-app/main/default/objects/Opportunity_Dashboard__c/fields/Awarded_Owner__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Owner__c</fullName>
    <label>Awarded/Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>