force-app/main/default/objects/Opportunity_Dashboard__c/fields/Braking_Ground_Date__c.field-meta.xml
<CustomField>
    <fullName>Braking_Ground_Date__c</fullName>
    <label>Braking Ground Date</label>
    <type>Date</type>
</CustomField>