force-app/main/default/objects/Opportunity_Dashboard__c/fields/Contact_Owner_Developer__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner / Developer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Dashboards</relationshipLabel>
    <relationshipName>Opportunity_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>