force-app/main/default/objects/Opportunity_Dashboard__c/fields/Has_Activity_In_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Has_Activity_In_Last_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Activity In Last Month</label>
    <type>Checkbox</type>
</CustomField>