force-app/main/default/objects/Opportunity_Dashboard__c/fields/HasOpenActivities__c.field-meta.xml
<CustomField>
    <fullName>HasOpenActivities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasOpenActivities</label>
    <type>Checkbox</type>
</CustomField>