force-app/main/default/objects/Opportunity_Dashboard__c/fields/HasOverdueTask__c.field-meta.xml
<CustomField>
    <fullName>HasOverdueTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasOverdueTask</label>
    <type>Checkbox</type>
</CustomField>