force-app/main/default/objects/Opportunity_Dashboard__c/fields/Inserting_Date__c.field-meta.xml
<CustomField>
    <fullName>Inserting_Date__c</fullName>
    <label>Inserting Date</label>
    <type>Date</type>
</CustomField>