force-app/main/default/objects/Opportunity_Dashboard__c/fields/Invited__c.field-meta.xml
<CustomField>
    <fullName>Invited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invited</label>
    <type>Checkbox</type>
</CustomField>