force-app/main/default/objects/Opportunity_Dashboard__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>