force-app/main/default/objects/Opportunity_Dashboard__c/fields/isNeglected__c.field-meta.xml
<CustomField>
    <fullName>isNeglected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field show does current opportunity is neglected in current end of month. This param will help filter records in building gashboards.</description>
    <label>isNeglected</label>
    <type>Checkbox</type>
</CustomField>