force-app/main/default/objects/Opportunity_Dashboard__c/fields/Last_Modified_By_Copy__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By Copy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>