force-app/main/default/objects/Opportunity_Dashboard__c/fields/LastModifiedDate_Copy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate_Copy__c</fullName>
    <label>LastModifiedDate Copy</label>
    <type>DateTime</type>
</CustomField>