force-app/main/default/objects/Opportunity_Dashboard__c/fields/Manufacturer_Rep__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Dashboards (Manufacturer Rep)</relationshipLabel>
    <relationshipName>Opportunity_Dashboards2</relationshipName>
    <type>Lookup</type>
</CustomField>