force-app/main/default/objects/Opportunity_Dashboard__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>Inserting_Month__c +&apos;-&apos;+Inserting_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month - Year</label>
    <type>Text</type>
</CustomField>