force-app/main/default/objects/Opportunity_Dashboard__c/fields/Newly_Submitted_Quote_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Newly_Submitted_Quote_First_Date__c</fullName>
    <label>Newly Submitted Quote First Date</label>
    <type>Date</type>
</CustomField>