force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Balance__c</fullName>
    <label>Opportunity Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>