force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Bill_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Bill_Paid_Amount__c</fullName>
    <label>Opportunity Bill Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>