force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Billed_Amount__c</fullName>
    <label>Opportunity Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>