force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Billing_Balances__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Billing_Balances__c</fullName>
    <label>Opportunity Billing Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>