force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ContactPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Dashboards (Opportunity Contact Person)</relationshipLabel>
    <relationshipName>Opportunity_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>