force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Contract__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunity Dashboards</relationshipLabel>
    <relationshipName>Opportunity_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>