force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <label>Opportunity Created Date</label>
    <type>DateTime</type>
</CustomField>