force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Expected_Revenue__c</fullName>
    <label>Opportunity Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>