force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast_Category__c</fullName>
    <label>Opportunity Forecast Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>