force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_GL_Var_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_GL_Var_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Opportunity Dashboards</relationshipLabel>
    <relationshipName>Opportunity_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>