force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Source__c</fullName>
    <label>Opportunity Lead Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>