force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Locked__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Locked</label>
    <type>Checkbox</type>
</CustomField>