force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Loss_Reason__c</fullName>
    <label>Opportunity Loss Reason</label>
    <length>120</length>
    <type>Text</type>
</CustomField>