force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Neglected_Days__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Neglected_Days__c</fullName>
    <label>Opportunity Neglected Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>