force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Price_Level__c</fullName>
    <label>Opportunity Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Level</valueSetName>
    </valueSet>
</CustomField>