force-app/main/default/objects/Opportunity_Dashboard__c/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <label>Opportunity StageName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>