force-app/main/default/objects/Opportunity_Dashboard__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Dashboards (Parent Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>