force-app/main/default/objects/Opportunity_Dashboard__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <label>RecordTypeName</label>
    <length>120</length>
    <type>Text</type>
</CustomField>