force-app/main/default/objects/Opportunity_Dashboard__c/fields/Sal_Rep_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Sal_Rep_Team_Name__c</fullName>
    <formula>Sales_Rep_Team__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sal / Rep Team Name</label>
    <type>Text</type>
</CustomField>