force-app/main/default/objects/Opportunity_Dashboard__c/fields/Sales_Rep_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep / Team</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Opportunity Dashboards</relationshipLabel>
    <relationshipName>Opportunity_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>