force-app/main/default/objects/Opportunity_Dashboard__c/fields/Specified__c.field-meta.xml
<CustomField>
    <fullName>Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specified</label>
    <type>Checkbox</type>
</CustomField>