force-app/main/default/objects/Opportunity_Dashboard__c/fields/Specified_Rep__c.field-meta.xml
<CustomField>
    <fullName>Specified_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specified Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Dashboards (Specified Rep)</relationshipLabel>
    <relationshipName>Opportunity_Dashboards3</relationshipName>
    <type>Lookup</type>
</CustomField>