force-app/main/default/objects/Opportunity_Dashboard__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>